# RewardsMaximizer

Backend/: Dockerfile  README.md
Backend/RewardsMaxAPI/: Cargo.toml  diesel.toml
Backend/RewardsMaxAPI/JSON Examples/: new_card.json  new_company.json  new_user.json  new_vendor_deal.json
Backend/RewardsMaxAPI/database/: rewards_maximizer.db
Backend/RewardsMaxAPI/migrations/: 20231108213118_init.sql
Backend/RewardsMaxAPI/src/: main.rs  mod_users.rs  users.rs  web.rs
Backend/RewardsMaxAPI/static/: styles.css
Backend/RewardsMaxAPI/templates/: crowdsourcing.html  home.html  index.html  login.html  search.html  search_results.html  signup.html  wallet.html
Frontend/: README.md  ember-cli-build.js  package-lock.json  package.json
Frontend/RM_HTML_Pages/: card-details.html  crowdsourcing.html  home.html  login.html  profile-page.html  search.html  search_results.html  styles.css  wallet.html
Frontend/app/: router.js
Frontend/app/components/: dropdown-menu.hbs  dropdown-menu.js
Frontend/app/controllers/: about.js  card-details.js  crowdsourcing.js  home.js  login.js  profile.js  registration.js  rewards.js  search-results.js  search.js  wallet.js
Frontend/app/helpers/: category-icon.js  gte.js  lt.js  range.js
Frontend/app/models/: card.js  rewards.js
Website/: Gemfile  README.md  glossary.md  index.md  labs.md  presentations.md  references.md  team-bio.md
Website/_layouts/: default.html  glossary.html  labs.html  presentations.html  references.html  team-bio.html
scraper/: README.md  database.py  pyproject.toml  rewards_maximizer.db  scraper.py
(+58 files in other folders)
